<resources>
    <string name="app_name">7MinWorkout</string>
    <string name="start">START</string>
    <string name="image">start image</string>
    <string name="get_ready_for_action">GET READY FOR ACTION!!</string>
    <string name="exercisename">ExerciseName</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign-In</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="do_you_forgot_your_password">Do you forgot your password?</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="sign_up">Sign-Up</string>
    <string name="login">Login</string>
    <string name="end">END</string>
    <string name="start_image">Start image</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_have_done_the_workout">You have done the workout!!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_the_workout_you_have_gone_this_far_are_you_sure_to_quit">This will stop the workout. You have gone this far, are you sure to quit!!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="startt">START</string>
    <string name="bmi">BMI</string>
    <string name="weight_in_kg">WEIGHT (in KG)</string>
    <string name="height_in_cm">HEIGHT(in Cm)</string>
    <string name="calculate">CALCULATE</string>
    <string name="us_units">US UNITS</string>
    <string name="inch">INCH</string>
    <string name="feet">FEET</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="weight_in_pounds">WEIGHT(in pounds)</string>
    <string name="weight_int_pounds">WEIGHT(int pounds)</string>
    <string name="s">WEIGHT (in pounds)</string>
    <string name="history">History</string>
</resources>