<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4389A2"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/flStart"
        android:layout_width="match_parent"
        android:background="@drawable/img_main_page"
        android:contentDescription="@string/image"
        android:layout_height="220dp"
        android:layout_marginBottom="100dp"
        android:scaleType="centerCrop"
        />
    <FrameLayout
        android:id="@+id/flStart"
        app:layout_constraintTop_toBottomOf="@+id/ImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_color_accent_border_ripple_background"
        android:layout_marginTop="100dp"
        android:elevation="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/blue"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/blue"
            android:textSize="@dimen/btn_text_size"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
        />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flHistory"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/item_circular_color_accent_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bmi"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize= "22sp"
            android:textStyle="bold"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Calculator"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/flBMI"
        app:layout_constraintStart_toStartOf="@+id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flBMI"/>

    <FrameLayout
        android:id="@+id/flHistory"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintStart_toEndOf="@+id/flBMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="75dp"
        android:layout_gravity = "center"
        android:gravity = "center"
        android:layout_height="75dp"
        android:background="@drawable/item_circular_color_accent_border">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_calendar_month_24"
            android:layout_gravity="center" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/history"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/flHistory"
        app:layout_constraintStart_toStartOf="@+id/flHistory"
        app:layout_constraintTop_toBottomOf="@id/flHistory"/>





</androidx.constraintlayout.widget.ConstraintLayout>